apps/production/uptime-kuma/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: harrytang-prod
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      namespace: harrytang-prod
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: kuma
          image: louislam/uptime-kuma:1.23.16 # {"$imagepolicy": "harrytang-prod:uptime-kuma"}
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: appdata
              mountPath: /app/data
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: uptime-kuma
