apps/production/uptime-kuma/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: status-http
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-prod-status-http
  hostnames:
    - status.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: status-https
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-prod-status-https
  hostnames:
    - status.harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma-srv
          port: 3001
