apps/production/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: harrytang-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - status.harrytang.xyz
      secretName: uptime-kuma-tls
  rules:
    - host: status.harrytang.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-srv
                port:
                  number: 3001
